Fixed navbar on small screen, added smooth scrolling

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,14 @@
+html {
+  scroll-behavior: smooth;
+}
+
 nav {
 	background-color: black;
 	color: white;
 	text-align: center;
 	position: fixed;
 	top: 0;
-	z-index: 9;
+	z-index: 20;
 }
 
 @media only screen and (min-width: 768px) {
@@ -27,13 +31,13 @@ nav {
 @media only screen and (max-width: 767px) {
 .navList {
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 	list-style-type: none;
-	justify-content: start;
+	justify-content: space-between;
 	align-items: start;
 	margin-bottom: 0px;
 	margin-left: 1rem;
-	margin-right: 0px;
+	margin-right: 1rem;
 }
 
 .about {
